--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="icon" type="image/x-icon" href="https://www.istockphoto.com/photo/calculator-and-money-gm1481185389-508564784?utm_campaign=srp_photos_top&utm_content=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fcalculator&utm_medium=affiliate&utm_source=unsplash&utm_term=calculator%3A%3A%3A">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://www.istockphoto.com/photo/calculator-and-money-gm1481185389-508564784?utm_campaign=srp_photos_top&utm_content=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fcalculator&utm_medium=affiliate&utm_source=unsplash&utm_term=calculator%3A%3A%3A"
+    />
     <title>React Calculator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
   </body>
 </html>
